<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SandWich</string>
    <string name="name">Name</string>
     <string name="phonenumber">Phone Number</string>
    <string name="search_hint">Search Customer Details</string>
    <string name="search_settings">Search Country Names</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sandwich">SandWich</string>
    <string name="costomerdetails">Customer Details</string>
    <string name="teritory">Teritory</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="searchtag">Search</string>
    <string name="loginhead">SandWich Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="telephone">TelePhone</string>
    <string name="cellphone">CellPhone</string>
    <string name="company">Company</string>
    <string name="emailid"> Email_Id</string>
    <string name="address">Address</string>
    <string name="streetnumber">Street#</string>
    <string name="buildingnumber">Building#</string>
    <string name="doornumber">Door#</string>
    <string name="floornumber">Floor#</string>
    <string name="landmark">LandMark</string>
    <string name="deliveryinstructions">Delivery Instruction</string>
    <string name="takeorder">Take Order</string>
    <string name="placeorder">Place Order</string>
    <string name="cancelorder">Cancel Order</string>
     <string name="updatedetails">Update Details</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="questionaries">Quastionaries</string>
    <string name="changeorder">Change Order</string>
    <string name="salesgirlslogin">Sales Girls Login</string>
    <string name="inpremisislogin">Inpremisis Login</string>
    <string name="securitykey">Security Key</string>
    <string name="confirmorder">Confirm Order</string>
    <string name="anotherorder">Another Order</string>
    <string name="autheticate">Authenticate</string>
    <string name="admin">Admin</string>
    <string name="details">Order Details</string>
    
    <string name="selectsandwich">Select SandWich</string>
    <string name="selectorder">Select Order</string>
    <string name="syncdata">Sync Data</string>
    <string name="search">Search By Name | Phone Number | Company</string>

</resources>