<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yoobikwiti.sandwich.login.SalesGirlsLogin" >

    <TextView
        android:id="@+id/titlebar"
        style="@style/TitleBar_style"
        android:text="@string/salesgirlslogin" />
    
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center" >
       
         
         
        <Spinner
            android:id="@+id/login_spiner_territory"
            style="@style/terytory_Spinner_Style"
            android:layout_below="@+id/login_spiner_company"
            android:layout_marginLeft="05dp"
            android:layout_marginRight="05dp"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/login_username_et"
            style="@style/EditTextStyle"
            android:inputType="text|textPersonName"
            android:background="@drawable/username"
            android:layout_below="@+id/login_spiner_territory"
            android:hint="@string/user_name" >
        </EditText>

        <EditText
            android:id="@+id/login_password_et"
            style="@style/EditTextStyle"
            android:background="@drawable/password"
            android:layout_below="@+id/login_username_et"
            android:inputType="textPassword"
             android:fontFamily="sans-serif"
            android:hint="@string/user_password" >
        </EditText>

        <Button
            android:id="@+id/login_button"
            style="@style/actionbutton_style"
            android:layout_below="@+id/login_password_et"
            android:layout_marginLeft="05dp"
            android:layout_marginRight="05dp"
            android:layout_marginTop="05dp"
            android:text="@string/login" />

       

    </RelativeLayout>

</RelativeLayout>