<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <RelativeLayout
        android:id="@+id/relative_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/titlebar"
            style="@style/TitleBar_style"
            android:layout_width="wrap_content"
            android:text="@string/searchtag" />
       <ImageButton
            android:id="@+id/button_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="02dp"
            android:layout_marginTop="05dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/addbuttonselector" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="#E29334" >

      

        <EditText
            android:id="@+id/searc_et"
            style="@style/EditTextStyle"
           android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/search" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_radiobutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E29334" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/name"
                android:textColor="@drawable/rbtn_textcolor_selector" />

            <RadioButton
                android:id="@+id/radioPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/phonenumber"
                android:textColor="@drawable/rbtn_textcolor_selector" />

            <RadioButton
                android:id="@+id/radiocompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/company"
                android:textColor="@drawable/rbtn_textcolor_selector" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" >

        <ListView
            android:id="@+id/searchlist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
        <TextView
            android:gravity="center"
    android:id="@+id/empty"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="gone"
    android:text="No items to display."/>
    </RelativeLayout>

</LinearLayout>